# cherryagent

./: .ci-agentic-validation  .ci-agentic-validation-v2  .ci-correctness-validation  .ci-engineer-loop-v2  .ci-engineer-loop-validation-2  .ci-engineer-loop-validation-3  .ci-engineer-loop-validation-branch  .ci-validate-markets-trading  .ci-windows-desktop-build-validation  .ci-windows-desktop-validation  .env.desktop.example  .env.example  .gitignore  Dockerfile  README.md  cherryagent.service  deploy.sh  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.ci/: planner-dashboard-v2.txt  planner-dashboard.txt  validate-infra-agent-v2.txt  validate-infra-agent.txt
.github/: ci-validation.txt
desktop-ui/: app.js  blue-theme.css  dashboard.html  index.html  styles.css
docs/: AGENTIC-AI.md  ARCHITECTURE.md  AUTHENTICATION.md  BIDPILOT.md  CHERRY_GATEWAY_MCP.md  COGNITIVE_RUNTIME.md  CORRECTNESS_LOOP.md  ENTERPRISE_WORKFORCE.md  FINANCE_BIGDATA_DATABASE_ARCHITECTURE.md  INFRA_AGENT.md  MARKETS.md  NCA_MACHINE_CONSCIOUSNESS_ARCHITECTURE.md  PERSISTENCE_MIGRATION.md  README.md  REPORT_STUDIO.md  SECURITYOPS-DATABASE.md  SUB_AGENTS.md  WINDOWS_DESKTOP_AGENT.md
nginx/: cherryagent.cherrydeskx.com.conf  setup-auth.sh
public/: app.js  chat-trace.js  cherry.js  (+6 more)
src-tauri/: .ci-validation  .ci-validation-final  .ci-validation-note  .ci-validation-v2  .ci-validation-v3  .ci-validation-v4  .ci-validation-v5  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.ico.b64
src-tauri/src/: desktop_bridge.rs  main.rs
(+126 files in other folders)
