[package]
name = "cherryagent-desktop"
version = "0.1.0"
description = "CherryAgent Windows desktop assistant"
authors = ["CherryAgent"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
base64 = "0.22"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
enigo = "0.6"
xcap = "0.4.1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
chrono = { version = "0.4", features = ["clock", "serde"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
